feat: colocando os metodos para assincrono

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "Test": "Server=127.0.0.1;Port=5432;Database=SeuPet;User Id=postgres;Password=postgres;" 
+    "Test": "Server=127.0.0.1;Port=5432;Database=SeuPet;User Id=postgres;Password=postgres;MaxPoolSize=100;MinPoolSize=10;" 
   }
 
 }
