--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -18,6 +18,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Restaurar
+      - name: Build
         run: dotnet build
 
