refactor: usando o DI

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "Test": "Server=127.0.0.1;Port=5432;Database=SeuPet;User Id=postgres;Password=postgres;MaxPoolSize=100;MinPoolSize=10;" 
+    "Test": "Server=127.0.0.1;Port=5432;Database=SeuPet;User Id=postgres;Password=postgres;MaxPoolSize=100;MinPoolSize=10;",
+    "Cache": "localhost:6379" 
   }
 
 }
